Tag menu did not work with URL rewrite enabled.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,4 +2,6 @@ Tag Plugin ChangeLog
 
 0.4.3
 -----
+- Fixed issue where admin could not ban or delete a tag.
+- Tag menu did not work with URL rewrite enabled.
 - Fixed error where phantom tags could appear.
